@@ -7,13 +7,14 @@ schema_DATA	= $(schema_in_files:.schemas.in=.schemas)
 
 EXTRA_DIST = notification.schemas.in
 
-install-data-local: $(schema_DATA)
-	@GCONF_SCHEMAS_INSTALL_TRUE@ \
+if GCONF_SCHEMAS_INSTALL
+install-data-local:
 	if test -z "$(DESTDIR)" ; then \
 		for p in $(schema_DATA) ; do \
-			$(GCONFTOOL) --install-schema-file=$$p; \
+			GCONF_CONFIG_SOURCE=$(GCONF_SCHEMA_CONFIG_SOURCE) $(GCONFTOOL) --makefile-install-rule $$p; \
 		done \
 	fi
+endif
 
 BUILT_SOURCES = notification.schemas
 CLEANFILES = $(BUILT_SOURCES)
